[#167102368] fix line-height on Safari

--- a/src/app/pages/meetings/edit-talking-points/edit-talking-points.component.scss
+++ b/src/app/pages/meetings/edit-talking-points/edit-talking-points.component.scss
@@ -6,7 +6,7 @@
 .input-lg {
   font-size: 2.5rem;
   color: #4a4a4a;
-  line-height: 1.3;
+  line-height: 1.2;
   font-weight: bold;
 }
 
